--- a/src/cat/Makefile
+++ b/src/cat/Makefile
@@ -1,11 +1,24 @@
-CC = gcc
-CFLAGS = -std=c11 -Wall -Wextra -Werror
-TARGET = s21_cat
+COMPILER = gcc
 
-all: $(TARGET)
+FLAGS = -Wall -Wextra -Werror -std=c11
 
-$(TARGET): s21_cat.c
-	$(CC) $(CFLAGS) -o $(TARGET) s21_cat.c
+INPUT_FILES = s21_cat.c
+
+OUTPUT_FILE = s21_cat
+
+all: s21_cat
+
+s21_cat: Makefile s21_cat.h s21_cat.c
+	$(COMPILER) $(FLAGS) $(INPUT_FILES) -o $(OUTPUT_FILE)
+
+check:
+	clang-format -style=Google -n *.c *.h
+
+rebuild:
+	make clean
+	make all
 
 clean:
 	rm -f s21_cat
+
+
